--- a/dam-m8/index.html
+++ b/dam-m8/index.html
@@ -171,7 +171,7 @@ a {
     </a><a href="/mvvm">
         <div class="card android">
             <div class="card-title">
-                <span>Model-View-VieModel</span>
+                <span>Model-View-ViewModel</span>
             </div>
             <div class="card-description">
 
