--- a/javatutorial/2/index.html
+++ b/javatutorial/2/index.html
@@ -31,7 +31,7 @@
     <p>La forma general de declarar una variable és així:</p>
 
     <sc java>
-        TipusDada nomVariable = inicialitacio;
+        TipusDada nomVariable = inicialitzacio;
     </sc>
 
     <p>La part esquerra d'aquesta sentència descriu la variable, i la part dreta
@@ -1058,9 +1058,4 @@
         <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/carta-formal">Carta formal</a></p>
         <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/arxius-de-codi-font">Arxius de codi font</a></p>         
     </challenge>
-
-    <project>
-        <p>Completa l'Etapa 2 del <a href="/chatbot#section2">projecte ChatBOT</a></p>
-    </project>
-
 </section>
