--- a/recyclerview/index.html
+++ b/recyclerview/index.html
@@ -149,7 +149,7 @@
                     }
 
                     MutableLiveData&lt;List&lt;Elemento&gt;&gt; obtener(){
-                        return listaElementos;
+                        return listElementosMutableLiveData;
                     }
 
                     void insertar(Elemento elemento){
