--- a/examen/index.html
+++ b/examen/index.html
@@ -536,7 +536,7 @@
                             <li><p>es suma 1 al de <w>tancats</w></p></li>
                             <li><p>es suma 1 al de <w>total</w></p></li>
                             <li><p>A més a més, mirem si el comptador de <w>tancats</w> és major al d'<w>oberts</w></p>
-                                <ul><li>si és així, és que hi ha un error de parèntesi mal tancat. Imprimirm l'error, 
+                                <ul><li>si és així, és que hi ha un error de parèntesi mal tancat. Imprimim l'error, 
                                     i restem 1 al comptador de <w>tancats</w></li></ul> 
 
                         </ul>
@@ -545,7 +545,7 @@
                 </ul>
             </li>
             <li>Un cop s'ha acabat de llegir tota l'expressió, s'haurien d'haver comptat el mateix número d'<w>oberts</w> 
-                que de <w>tancats</w>, en cas contrari, és que falten parèntesis per tancar.</li>
+                que de <w>tancats</w>. Si no és així, és que falten parèntesis per tancar.</li>
                 
         </p></li>
         </ul>
