--- a/inicicss/index.html
+++ b/inicicss/index.html
@@ -6,9 +6,9 @@
 
 
 <header>
-    <h1>Pràctica 3: Fonaments de text HTML. Començar amb CSS</h1>
+    <h1>Inici amb CSS</h1>
 
-    <resum>En aquesta pràctica començarem amb els fonaments bàsics de l'HTML.</resum>
+    <resum>En aquesta pràctica començarem amb els fonaments bàsics de CSS.</resum>
 
     <p>Segueix aquests tutorials de la <strong>Mozilla Developer Network</strong>:</p>
    
