--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -390,6 +390,48 @@
                 </tr>
             </table>
         </question>
+        <question text>
+            <statement>
+                <p>Introdueix el valor de cada variable, <strong>després</strong> de cada sentència d'aquest programa:</p>
+            </statement>
+
+            <table>
+                <thead>
+                    <th style="width: 14em;"></th><th><w>a</w></th><th><w>b</w></th></th>
+                </thead>
+                <tr>
+                    <td><w>int a = 10;</w></td>
+                    <td><o>10</o></td>
+                    <td></td>
+
+                </tr>
+                <tr>
+                    <td><w>int b = a + 10;</w></td>
+                    <td><o>10</o></td>
+                    <td><o>20</o></td>
+                </tr>
+                <tr>
+                    <td><w>a += 10;</w></td>
+                    <td><o>20</o></td>
+                    <td><o>20</o></td>
+                </tr>
+                <tr>
+                    <td><w>a += b;</w></td>
+                    <td><o>40</o></td>
+                    <td><o>20</o></td>
+                </tr>
+                <tr>
+                    <td><w>a += a + b;</w></td>
+                    <td><o>100</o></td>
+                    <td><o>20</o></td>
+                </tr>
+                <tr>
+                    <td><w>a += a + a;</w></td>
+                    <td><o>300</o></td>
+                    <td><o>20</o></td>
+                </tr>
+            </table>
+        </question>
     </quizz>
     
     <challenge>
