--- a/nextcloud/index.html
+++ b/nextcloud/index.html
@@ -135,12 +135,16 @@
     </ul>
 
     <h3>Uso de NextCloud</h3>
-    <p>Accede a NextCloud para crear, eliminar y compartir ficheros usando:</p>
+    <p>Accede a NextCloud usando:</p>
     <ul>
       <li>Web interface</li>
       <li>WebDAV</li>
       <li>cURL</li>
       <li>App Desktop/Mobile</li>
     </ul>
+
+    <p>Comprueba que todas las acciones de administración 
+      hechas anteriormente funcionan correctamente. Para ello, crea los usuarios 
+    y grupos que consideres necesarios. </p>
 
 </section>
