--- a/elementshtml/index.html
+++ b/elementshtml/index.html
@@ -6,9 +6,9 @@
 
 
 <header>
-    <h1>Elements HTML</h1>
+    <h1>Taules HTML</h1>
 
-    <resum>En aquesta pràctica començarem amb els elements HTML: table, ul, form</resum>
+    <resum>En aquesta pràctica començarem amb les taules HTML</resum>
 
     <p>Segueix aquests tutorials de la <strong>Mozilla Developer Network</strong>:</p>
    
@@ -20,13 +20,13 @@
 </header>
 <section>
     <h2>Desenvolupament de la pràctica</h2>
-    <p>La pràctica consisteix a crear una web amb l'horari del curs.</p>
+    <p>La pràctica consisteix a crear una web amb l'horari del curs, i una altra web amb el llistat d'alumnes.</p>
 
-
-    <check>El desenvolupament de la web haurà de complir, al menys, els següents criteris:</check>
+    <h3>Horari</h3>
+    <check>El desenvolupament de la web amb l'<strong>horari</strong> haurà de complir, al menys, els següents criteris:</check>
     <ul>
         <li>
-           Caldrà utilitzar els elements
+           Caldrà utilitzar els <strong>elements</strong>
            <ul>
                <li><w>table</w></li>
                <li><w>tr</w></li>
@@ -35,7 +35,7 @@
            </ul>
         </li>
         <li>
-            Caldrà utilitzar els atributs
+            Caldrà utilitzar els <strong>atributs</strong>
             <ul>
                 <li><w>colspan</w></li>
                 <li><w>rowspan</w></li>
@@ -43,40 +43,44 @@
          </li>
                 </li>
                 <li>
-                    Caldrà utilitzar, al menys, les següents <strong>propietats</strong>:
+                    Caldrà utilitzar, al menys, les següents <strong>propietats</strong> CSS:
 
                     <ul>
-                        <li><w css>color</w>
-                        <li><w css>font-size</w>
-                        <li><w css>list-style-type</w>
-                        <li><w css>font-weight</w>
-                        <li><w css>text-decoration</w>
-                        <li><w css>background-color</w>
-                        <li><w css>padding</w>
-                        <li><w css>margin</w>
-                        <li><w css>width</w>
-                        <li><w css>height</w>
-                        <li><w css>border</w>
+                        <li><w>font-family</w></li>
+                        <li><w>color</w></li>
+                        <li><w>background-color</w></li>
+                        <li><w>text-align</w></li>
+                        <li><w>padding</w></li>
+                        <li><w>margin</w></li>
+                    </ul>
+
+                    <ul>
+                        <li><w>width</w></li>
+                        <li><w>border-collapse</w></li>
+                        <li><w>border</w></li>
+                    </ul>
+                </li>
+
+                <li>
+                    Caldrà utilitzar les següents <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes">pseudo classes</a>:
+                    <ul>
+                        <li><w>first-child</w></li>
+                        <li><w>last-child</w></li>
+                        <li><w>nth-child(odd)</w></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li>
-            L'organització dels fitxers i carpetes de la pàgina ha de ser:
-            <ul>
-                <li>El fitxer <file>index.html</file> (pàgina principal) ha d'estar a la carpeta arrel
-                <li>Els fitxers <file>.html</file> de les receptes han d'estar a la carpeta <folder>receptes</folder>
-                <li>El/s fitxer/s <file>.css</file> han d'estar a la carpeta <folder>css</folder>
-                <li>Les imatges han d'estar a la carpeta <folder>img</folder>
-            </ul>
-
-        </li>
-
     </ul>
+    <h4>Exemple:</h4>
+    <img src="img/taula1.png">
       
-    <h3>Exemple</h3>
-    <h4>Pàgina principal</h4>
-    <img src="img/image7.png">
-    <h4>Pàgina d'una recepta</h4>
-    <img src="img/image8.png">
+    <h3>Alumnes</h3>
+
+    <p>Per al llistat d'alumnes s'ha d'utilitzar com a base el codi d'aquest repository: 
+        <a href="https://github.com/smxm8/table">https://github.com/smxm8/table</a>
+    </p>
+
+    <h4>Exemple:</h4>
+    <img src="img/taula2.png">
 </section>
