--- a/elementshtml/index.html
+++ b/elementshtml/index.html
@@ -10,7 +10,7 @@
 
     <resum>En aquesta pràctica començarem amb les taules HTML</resum>
 
-    <p>Segueix aquests tutorials de la <strong>Mozilla Developer Network</strong>:</p>
+    <p>Segueix aquest tutorial de la <strong>Mozilla Developer Network</strong>:</p>
    
     <ul>
         <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics">
