--- a/htmllayout/index.html
+++ b/htmllayout/index.html
@@ -5,7 +5,7 @@
 
 
 <header>
-    <h1>Inici en HTML</h1>
+    <h1>HTML Layout</h1>
 
     <abstract>
         <resum>En aquesta pràctica treballarem la disposició d'elements amb <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox">Flexbox</a>
