--- a/javatutorial/8/index.html
+++ b/javatutorial/8/index.html
@@ -151,7 +151,7 @@
     <p>Com hem vist, un array no es pot canviar de tamany un cop creat 
         (<em>tot i que sí que es pot crear un array diferent y copiar-hi les dades</em>).</p>
 
-    <p>Per a obtenir el tamany d'un array, es pot accedir a la propietat espcial <w>length</w>. Aquí tens un exemple:</p>
+    <p>Per a obtenir el tamany d'un array, es pot accedir a la propietat especial <w>length</w>. Aquí tens un exemple:</p>
     <sc java>
         int[] arrayEnters = { 13, 25, 37, 49 };
         
@@ -707,10 +707,10 @@
     <p>Quan diem recòrrer un array significa accedir un per un a cadascun dels elements de l'array.</p>
 
     <p>Podem utilitzar un bucle <w>for</w> amb una variable <w>i</w> que vagi tenint els valors des de <w>0</w> (la primera 
-    posició de l'array) fins a <w>length - 1</w> (l'última posició). Llavors, utilitzarem la variable <w>i</w> com a índex 
-    de l'array, i així aconseguirem accedir a tots els elements:</p>
+    posició de l'array) fins a <w>length - 1</w> (l'última posició). Llavors, utilitzarem la variable <w>i</w> com a índex, 
+    i així aconseguirem accedir a tots els elements:</p>
 
-    <p>El següent codi accedeix a cadascun dels elements de l'array, per a imprimir-lo:</p>
+    <p>El següent codi accedeix a cadascun dels elements de l'array, per a imprimir-los:</p>
     <sc java>
         String[] paraules = { "anem", "a", "recorrer", "aquest", "array" };
 
