--- a/moodle/index.html
+++ b/moodle/index.html
@@ -91,8 +91,12 @@
         Para ello deberás configurar el SMTP (<a href="https://docs.moodle.org/310/en/Email_setup_gmail">Email setup gmail</a>)
       </li>
     </ul>
-
   </li>
 
+  <h4>Roles</h4>
+  <ul>
+    <li>Asigna el rol profesor a un usuario un curso</li>
+    <li>Define un rol personalizado y justifícalo</li>
+  </ul>
 
 </section>
